// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackedPidTenantFields component renders as expected when provided data 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div
    class="Toastify"
  />
  .c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.c1 {
  width: 100%;
  text-align: left;
}

.c1 div {
  font-family: 'BCSans-Bold';
}

<div
    class="c0 c1"
  >
    <label>
      PID:
    </label>
    <div
      class="c2"
    >
      111-111-111
    </div>
  </div>
  .c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.c1 {
  width: 100%;
  text-align: left;
}

.c1 div {
  font-family: 'BCSans-Bold';
}

<div
    class="c0 c1"
  >
    <label>
      Tenant:
    </label>
    <div
      class="c2"
    >
      first last
    </div>
  </div>
</DocumentFragment>
`;

exports[`StackedPidTenantFields component renders as expected when provided no data 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div
    class="Toastify"
  />
  .c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.c1 {
  width: 100%;
  text-align: left;
}

.c1 div {
  font-family: 'BCSans-Bold';
}

<div
    class="c0 c1"
  >
    <label>
      PID:
    </label>
    <div
      class="c2"
    />
  </div>
  .c2 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.c1 {
  width: 100%;
  text-align: left;
}

.c1 div {
  font-family: 'BCSans-Bold';
}

<div
    class="c0 c1"
  >
    <label>
      Tenant:
    </label>
    <div
      class="c2"
    />
  </div>
</DocumentFragment>
`;
